5.0.2
	+ Fix dansguardian integration
5.0.1
	+ Integration with antivirus module
	+ Fix module restart in postinst
5.0
	+ Set version to 5.0
	+ Remove no longer maintained Active Directory integration
4.0.1
	+ Fix configuration for external AD
	+ Do not listen on internal interfaces
4.0
	+ Remove ads on deprecated features
	+ Set version to 4.0
	+ Added dynamical group authorization
	+ Do not lowercase user names if kerberos is used
	+ Fix exception accesing the access rules model when samba not provisioned
	+ Fixed populateGroups() in AccessRules when upgrading from 3.4
	+ Fixed wrong old-style try-catch
3.5.1
	+ Remove categorized domains temporary files
3.5
	+ Fixed generated rules for blanket domain deny
	+ Adapted to samba4 instead of OpenLDAP
	+ Set version to 3.5
	+ Speed up external AD connection using persistence
	+ Allow dansguardian user to read categories lists files
3.4
	+ Give support to multiple addresses for a domain in Transparent
	  Proxy Exemptions
	+ Save modules configurations after initialSetup
	+ Added all subdomains in cache exemptions
	+ Deny cache explicitly from cache exemption domains
	+ Give support to optional ABORTED flag in denied requests when
	  the HTTP client aborts the request
	+ Adapt configuration for squid 3.3.8
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
	+ Forced 644 permission on Dansguardian files to avoid zombie processes
	+ Remove canonical_dn call for compatibility with MS LDAP servers in
	  external AD mode
	+ Synchronise AD groups every 30 min if using external AD and any
	  filter profile includes an AD group
	+ Manage errors when AD failed on fulfill our requests in external
	  AD mode
	+ Give support to groups with more than 1500 members and more than
	  1000 groups in external AD mode
	+ Fixed regression in authenticationMode method
	+ Added validation of the domains added to the transparent proxy
	  exceptions
3.3