@@ -7,7 +7,7 @@
 </%doc>
 <%args>
     $port
-    $transparent => undef
+    $mode => ''
 
     $hostfqdn
 
@@ -287,7 +287,7 @@ snmp_access allow snmppublic from_localhost
 snmp_access deny all
 </%def>
 
-http_port 0.0.0.0:<% $port %> <% $transparent ? 'intercept' : '' %>
+http_port 0.0.0.0:<% $port %> <% $mode %>
 
 visible_hostname <% $hostfqdn %>
 coredump_dir /var/spool/squid
