@@ -1,3 +1,5 @@
+HEAD
+	+ Fix regression in transparent proxy mode with filter
 5.0.2
 	+ Fix dansguardian integration
 5.0.1
